--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run build",
     "start:functions": "netlify-lambda serve src/functions --port 8888",
-    "build": "netlify-lambda build functions"
+    "build": "netlify-lambda build src/functions"
   },
   "dependencies": {
     "express": "^4.17.1",
